# MeshPolygonization

./: .gitignore  CGALTypes.h  How_to_build.md  LinesToPolygons.h  Overlap.h  PlanarSegmentation.cpp  Planarity.cpp  Planarity.h  README.md  Simplification.cpp  Simplification.h  StructureGraph.h  Utils.h  per.py.gpg
.github/workflows/: test-build-gcc.yml
MeshPolygonization/: CandidateFace.h  MeshSimplification.cpp  Optimization.h  Orientation.h  PlanarSegmentation.cpp  PlanarSegmentation.h  Planarity.cpp  Planarity.h  Simplification.cpp  StructureGraph.cpp  StructureGraph.h  Utils.h
MeshPolygonization/data/: README.txt.txt
MeshPolygonization/graphs/: README.txt.txt
MeshPolygonization/outputs/: README.txt.txt
MeshPolygonization/simplified/: README.txt.txt
MeshSimplification/: AlphaShape.cpp  AlphaShape.h  CGALTypes.h  CandidateFace.h  Draw.h  Intersection.h  LinesToPolygons.h  MeshSimplification.cpp  MeshSimplification.vcxproj  MeshSimplification.vcxproj.filters  Optimization.h  Orientation.h  Overlap.h  PlanarSegmentation.cpp  PlanarSegmentation.h  Planarity.cpp  Segment.h  Simplification.cpp  Simplification.h  StructureGraph.cpp  StructureGraph.h  TriangulationOverlap.h  Utils.h
MeshSimplification/data/: arc_mesh.off  lans_church.off  test.off
RPly/: rply.c
data/: ReadMe.md  arc_result.ply  block_result.ply  building.off  building.off-result.ply  house_a.off  house_a_result.ply  house_b.off  house_b_result.ply  parameters.txt  scene.off-result.ply  test.off
meshes/: arc_mesh.stl  arc_mesh_simplified.stl  urban_scene.stl  urban_scene_simplified.stl
programs/: AlphaShape.h  Draw.h  Intersection.h  TriangulationOverlap.h
proj/: MeshSimplification.vcxproj  MeshSimplification.vcxproj.filters
solver/: Mixed_integer_program_traits.h  SCIP_mixed_integer_program_traits.h
src/: CMakeLists.txt
src/Polygonization/: CGALTypes.h  CMakeLists.txt  CandidateFace.h  FileWritter.h  Intersection.h  Optimization.h  Orientation.h  PlanarSegmentation.cpp  PlanarSegmentation.h  Planarity.cpp  Planarity.h  Segment.h  Simplification.cpp  Simplification.h  StructureGraph.cpp  StructureGraph.h  Utils.h  main.cpp
src/Polygonization/solver/: Mixed_integer_program_traits.h  SCIP_mixed_integer_program_traits.h  linear_program.h  linear_program_solver.cpp  linear_program_solver.h  linear_program_solver_GUROBI.cpp  linear_program_solver_SCIP.cpp
